src/test/resources/org/nest/nestml/_cocos/invalid/illegalAssignments.nestml
neuron test:
  parameters:
    p ms = 20 ms
  end

  internals:
   a real = 0
  end

  equations:
    function b real = 0
  end

  update:
    a = 2. # error
    b = 2. # error
    p = 4 ms #error
  end
end